// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getData volume get volume with id 1`] = `
Object {
  "content": null,
  "date": "2007-01-18",
  "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
  "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
  "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
  "isbn": "9782505000327",
  "number": 1,
  "title": "Tome 1",
}
`;

exports[`getData volume get volumes with edition_id 1`] = `
Immutable.Map {
  ec9d0282-78a1-491e-bd1e-a937b332c56f: Object {
    "content": null,
    "date": "2011-05-06",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
    "isbn": "9782505010951",
    "number": 6,
    "title": "Tome 6",
  },
  ef282203-2ef5-4972-9598-d365fe7ff09c: Object {
    "content": null,
    "date": "2011-03-04",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
    "isbn": "9782505010692",
    "number": 5,
    "title": "Tome 5",
  },
  69fed8ee-a500-4bde-9ba2-458f639785d1: Object {
    "content": null,
    "date": "2011-01-07",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
    "isbn": "9782505010326",
    "number": 4,
    "title": "Tome 4",
  },
  7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32: Object {
    "content": null,
    "date": "2010-11-05",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
    "isbn": "9782505009986",
    "number": 3,
    "title": "Tome 3",
  },
  3a03733c-1a5a-4673-9299-28e5cc82a8af: Object {
    "content": null,
    "date": "2010-09-03",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
    "isbn": "9782505009061",
    "number": 2,
    "title": "Tome 2",
  },
  dbab2483-2d3c-4832-9993-b6efbd765787: Object {
    "content": null,
    "date": "2010-07-02",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
    "isbn": "9782505009054",
    "number": 1,
    "title": "Tome 1",
  },
}
`;

exports[`getData volume get volumes with series_id 1`] = `
Immutable.Map {
  f0bc0f76-bddf-4af8-a589-0d877aae9235: Object {
    "content": null,
    "date": "2007-12-07",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
    "isbn": "9782505001997",
    "number": 7,
    "title": "Tome 7",
  },
  a2280876-7082-48b5-bab3-34c4e5eab279: Object {
    "content": null,
    "date": "2007-10-05",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
    "isbn": "9782505001812",
    "number": 6,
    "title": "Tome 6",
  },
  fa7a1162-d9e3-462f-a367-8371a55f7c94: Object {
    "content": null,
    "date": "2007-04-05",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
    "isbn": "9782505000792",
    "number": 3,
    "title": "Tome 3",
  },
  11d1491e-22d4-49f1-b29f-78007493d4e6: Object {
    "content": null,
    "date": "2007-02-01",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
    "isbn": "9782505000426",
    "number": 2,
    "title": "Tome 2",
  },
  ec9d0282-78a1-491e-bd1e-a937b332c56f: Object {
    "content": null,
    "date": "2011-05-06",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
    "isbn": "9782505010951",
    "number": 6,
    "title": "Tome 6",
  },
  69fed8ee-a500-4bde-9ba2-458f639785d1: Object {
    "content": null,
    "date": "2011-01-07",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
    "isbn": "9782505010326",
    "number": 4,
    "title": "Tome 4",
  },
  c1995831-6447-43e9-869b-74f2cf93966d: Object {
    "content": null,
    "date": "2008-06-06",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "c1995831-6447-43e9-869b-74f2cf93966d",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
    "isbn": "9782505003038",
    "number": 10,
    "title": "Tome 10",
  },
  a4477f49-cff1-4913-bd39-68fefbc10479: Object {
    "content": null,
    "date": "2008-07-04",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
    "isbn": "9782505003694",
    "number": 11,
    "title": "Tome 11",
  },
  11606764-7aee-4e33-9df1-e9dc5298eda8: Object {
    "content": null,
    "date": "2008-10-02",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
    "isbn": "9782505004295",
    "number": 12,
    "title": "Tome 12",
  },
  3a03733c-1a5a-4673-9299-28e5cc82a8af: Object {
    "content": null,
    "date": "2010-09-03",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
    "isbn": "9782505009061",
    "number": 2,
    "title": "Tome 2",
  },
  b95ab092-9baf-4feb-b8f1-e79b449b9c54: Object {
    "content": null,
    "date": "2007-08-24",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
    "isbn": "9782505001614",
    "number": 5,
    "title": "Tome 5",
  },
  081648ff-1b14-4af7-b8f0-9e97b0ba6804: Object {
    "content": null,
    "date": "2009-09-18",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
    "isbn": "9782505004523",
    "number": 13,
    "title": "Tome 13",
  },
  12b5dc0d-253a-41dd-bbee-e1f31e947eb1: Object {
    "content": null,
    "date": "2008-02-15",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
    "isbn": "9782505002697",
    "number": 8,
    "title": "Tome 8",
  },
  e7dbccb5-4710-446b-8c08-d35fb8a1eaeb: Object {
    "content": null,
    "date": "2007-05-31",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
    "isbn": "9782505001065",
    "number": 4,
    "title": "Tome 4",
  },
  dbab2483-2d3c-4832-9993-b6efbd765787: Object {
    "content": null,
    "date": "2010-07-02",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
    "isbn": "9782505009054",
    "number": 1,
    "title": "Tome 1",
  },
  73f6690b-716b-4659-97f5-d66ce10acd8a: Object {
    "content": null,
    "date": "2008-04-11",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
    "isbn": "9782505002970",
    "number": 9,
    "title": "Tome 9",
  },
  7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32: Object {
    "content": null,
    "date": "2010-11-05",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
    "isbn": "9782505009986",
    "number": 3,
    "title": "Tome 3",
  },
  ff15ae7e-fcfe-4061-a27b-3b481e5f313c: Object {
    "content": null,
    "date": "2007-01-18",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
    "isbn": "9782505000327",
    "number": 1,
    "title": "Tome 1",
  },
  ef282203-2ef5-4972-9598-d365fe7ff09c: Object {
    "content": null,
    "date": "2011-03-04",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
    "isbn": "9782505010692",
    "number": 5,
    "title": "Tome 5",
  },
}
`;
